--- a/src/apps/popup/main.html
+++ b/src/apps/popup/main.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Hunt</title>
-  <link rel="stylesheet" href="css/popup.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
 <div id="main"></div>
 
-<script src="js/popup.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
