Implement the default tab functionality

--- a/src/apps/tabs/main.html
+++ b/src/apps/tabs/main.html
@@ -2,7 +2,11 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Product Hunt</title>
+  <title>Product Hunt Tab</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../../vendor/animate.css/animate.min.css">
 </head>
-<body></body>
+<body>
+<script src="main.js"></script>
+</body>
 </html>
