Track click events

--- a/src/apps/tabs/main.html
+++ b/src/apps/tabs/main.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<script src="../../vendor/analytics.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
