--- a/src/apps/tabs/main.html
+++ b/src/apps/tabs/main.html
@@ -2,10 +2,11 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Product Hunt Tab</title>
+  <title>Product Hunt: The best new products, every day</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+ <script src="https://use.typekit.net/htq7gvx.js"></script>
 <script src="../../vendor/analytics.js"></script>
 <script src="main.js"></script>
 </body>
