Load Typekit fonts on the options page

--- a/src/apps/options/main.html
+++ b/src/apps/options/main.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<script src="https://use.typekit.net/htq7gvx.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
