Use Header react component

--- a/src/apps/tabs/main.html
+++ b/src/apps/tabs/main.html
@@ -7,20 +7,7 @@
   <script src="../../vendor/analytics.js"></script>
 </head>
 <body>
-<div class="main">
-  <header class="main-header">
-    <a href="http://www.producthunt.com">
-      <img src="/common/header/logo.svg" alt="Product Hunt" class="logo" />
-      <div class="title">
-        <h1>Product Hunt</h1>
-        <h2>The best new products, every day</h2>
-      </div>
-    </a>
-  </header>
-
-  <div id="main"></div>
-</div>
-
-<script src="main.js"></script>
+  <div id="main" class="main"></div>
+  <script src="main.js"></script>
 </body>
 </html>
